# serializer version: 1
# name: TestDCLConnectEndpointContract.test_connect_source_response_structure
  dict({
    'agents': list([
      'revops_pilot',
    ]),
    'ok': True,
    'source_mode': 'aam_connectors',
    'sources': list([
    ]),
  })
# ---
# name: TestDCLSourceSchemasContract.test_source_schemas_empty_structure
  dict({
  })
# ---
# name: TestDCLSourceSchemasContract.test_source_schemas_with_sources_structure
  dict({
    'hubspot': dict({
      'Company': dict({
        'path': '/tmp/aam_tables/dd00795d-0a0d-4010-b65e-63bd392100e5/hubspot/Company.csv',
        'samples': list([
          dict({
            'domain': 'techstart.com',
            'id': '123456',
            'industry': 'SaaS',
            'name': 'TechStart Inc',
          }),
          dict({
            'domain': 'enterprise.com',
            'id': '123457',
            'industry': 'Enterprise',
            'name': 'Enterprise Co',
          }),
        ]),
        'schema': dict({
          'domain': 'string',
          'id': 'string',
          'industry': 'string',
          'name': 'string',
        }),
      }),
      'Deal': dict({
        'path': '/tmp/aam_tables/dd00795d-0a0d-4010-b65e-63bd392100e5/hubspot/Deal.csv',
        'samples': list([
          dict({
            'amount': 150000,
            'company_id': '123456',
            'dealname': 'Q4 Enterprise Deal',
            'dealstage': 'closedwon',
            'id': '987654',
          }),
          dict({
            'amount': 300000,
            'company_id': '123457',
            'dealname': 'Annual Contract',
            'dealstage': 'proposal',
            'id': '987655',
          }),
        ]),
        'schema': dict({
          'amount': 'numeric',
          'company_id': 'string',
          'dealname': 'string',
          'dealstage': 'string',
          'id': 'string',
        }),
      }),
    }),
    'salesforce': dict({
      'Account': dict({
        'path': '/tmp/aam_tables/dd00795d-0a0d-4010-b65e-63bd392100e5/salesforce/Account.csv',
        'samples': list([
          dict({
            'AnnualRevenue': 5000000,
            'Id': '001xx000003DGb2AAG',
            'Industry': 'Technology',
            'Name': 'Acme Corp',
          }),
          dict({
            'AnnualRevenue': 12000000,
            'Id': '001xx000003DGb3AAG',
            'Industry': 'Manufacturing',
            'Name': 'Global Industries',
          }),
        ]),
        'schema': dict({
          'AnnualRevenue': 'numeric',
          'Id': 'string',
          'Industry': 'string',
          'Name': 'string',
        }),
      }),
      'Opportunity': dict({
        'path': '/tmp/aam_tables/dd00795d-0a0d-4010-b65e-63bd392100e5/salesforce/Opportunity.csv',
        'samples': list([
          dict({
            'AccountId': '001xx000003DGb2AAG',
            'Amount': 250000,
            'Id': '006xx000001Sv2fAAC',
            'Name': 'Big Deal',
            'StageName': 'Closed Won',
          }),
          dict({
            'AccountId': '001xx000003DGb3AAG',
            'Amount': 500000,
            'Id': '006xx000001Sv2gAAC',
            'Name': 'Major Contract',
            'StageName': 'Negotiation',
          }),
        ]),
        'schema': dict({
          'AccountId': 'string',
          'Amount': 'numeric',
          'Id': 'string',
          'Name': 'string',
          'StageName': 'string',
        }),
      }),
    }),
  })
# ---
# name: TestDCLStateContract.test_empty_graph_state_structure
  dict({
    'agent_consumption': dict({
      'finops_pilot': list([
        'aws_resources',
        'cost_reports',
      ]),
      'revops_pilot': list([
        'account',
        'opportunity',
        'health',
        'usage',
      ]),
    }),
    'auth_enabled': True,
    'auto_ingest_unmapped': False,
    'confidence': None,
    'dev_mode': False,
    'edges': list([
    ]),
    'entity_sources': dict({
    }),
    'events': list([
    ]),
    'llm': dict({
      'calls': 12,
      'calls_saved': 5,
      'tokens': 143940,
    }),
    'metadata': dict({
      'agent_consumption': dict({
        'finops_pilot': list([
          'aws_resources',
          'cost_reports',
        ]),
        'revops_pilot': list([
          'account',
          'opportunity',
          'health',
          'usage',
        ]),
      }),
      'auth_enabled': True,
      'auto_ingest_unmapped': False,
      'dev_mode': False,
      'events': list([
      ]),
      'llm': dict({
        'calls': 12,
        'calls_saved': 5,
        'tokens': 143940,
      }),
      'rag': dict({
        'last_retrieval_count': 0,
        'mappings_retrieved': 0,
        'retrievals': list([
        ]),
        'total_mappings': 14956,
      }),
      'source_mode': 'demo_files',
      'timeline': list([
      ]),
    }),
    'nodes': list([
    ]),
    'rag': dict({
      'last_retrieval_count': 0,
      'mappings_retrieved': 0,
      'retrievals': list([
      ]),
      'total_mappings': 14956,
    }),
    'selected_agents': list([
    ]),
    'source_mode': 'demo_files',
    'sources_added': list([
    ]),
    'timeline': list([
    ]),
  })
# ---
# name: TestDCLStateContract.test_graph_state_metadata_fields
  dict({
    'agent_consumption': dict({
      'finops_pilot': list([
        'aws_resources',
        'cost_reports',
      ]),
      'revops_pilot': list([
        'account',
        'opportunity',
        'health',
        'usage',
      ]),
    }),
    'auth_enabled': True,
    'auto_ingest_unmapped': False,
    'confidence': 0.84,
    'dev_mode': False,
    'edges': list([
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'revenue',
            'source': 'AnnualRevenue',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'Industry',
          }),
        ]),
        'label': 'salesforce_Account → account',
        'source': 'src_salesforce_Account',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
        ]),
        'label': 'salesforce_Opportunity → account',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'Amount',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'StageName',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
        ]),
        'label': 'salesforce_Opportunity → opportunity',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'name',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'industry',
          }),
        ]),
        'label': 'hubspot_Company → account',
        'source': 'src_hubspot_Company',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'dealname',
          }),
        ]),
        'label': 'hubspot_Deal → account',
        'source': 'src_hubspot_Deal',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'amount',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'dealstage',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'id',
          }),
        ]),
        'label': 'hubspot_Deal → opportunity',
        'source': 'src_hubspot_Deal',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_aam_sources',
        'target': 'src_salesforce_Account',
        'value': 1,
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_aam_sources',
        'target': 'src_salesforce_Opportunity',
        'value': 1,
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'account_id',
          'account_name',
          'industry',
          'revenue',
          'employee_count',
          'created_date',
        ]),
        'entity_name': 'account',
        'label': '',
        'source': 'dcl_account',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'opportunity_id',
          'opportunity_name',
          'account_id',
          'stage',
          'amount',
          'close_date',
          'probability',
        ]),
        'entity_name': 'opportunity',
        'label': '',
        'source': 'dcl_opportunity',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_aam_sources',
        'target': 'src_hubspot_Company',
        'value': 1,
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_aam_sources',
        'target': 'src_hubspot_Deal',
        'value': 1,
      }),
    ]),
    'entity_sources': dict({
    }),
    'events': list([
    ]),
    'llm': dict({
      'calls': 12,
      'calls_saved': 5,
      'tokens': 143940,
    }),
    'metadata': dict({
      'agent_consumption': dict({
        'finops_pilot': list([
          'aws_resources',
          'cost_reports',
        ]),
        'revops_pilot': list([
          'account',
          'opportunity',
          'health',
          'usage',
        ]),
      }),
      'auth_enabled': True,
      'auto_ingest_unmapped': False,
      'dev_mode': False,
      'events': list([
      ]),
      'llm': dict({
        'calls': 12,
        'calls_saved': 5,
        'tokens': 143940,
      }),
      'rag': dict({
        'last_retrieval_count': 6,
        'mappings_retrieved': 6,
        'retrievals': list([
          dict({
            'ontology_entity': 'opportunity.stage',
            'similarity': 0.889,
            'source_field': 'deal_stage',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.industry',
            'similarity': 0.885,
            'source_field': 'industry',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.amount',
            'similarity': 0.88,
            'source_field': 'amount',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.account_id',
            'similarity': 0.864,
            'source_field': 'company_id',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.probability',
            'similarity': 0.864,
            'source_field': 'probability',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.opportunity_name',
            'similarity': 0.862,
            'source_field': 'deal_name',
            'source_system': 'hubspot',
          }),
        ]),
        'total_mappings': 14956,
      }),
      'source_mode': 'demo_files',
      'timeline': list([
      ]),
    }),
    'nodes': list([
      dict({
        'id': 'dcl_account',
        'label': 'Account (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'dcl_opportunity',
        'label': 'Opportunity (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'sys_aam_sources',
        'label': 'from AAM',
        'type': 'source_parent',
      }),
      dict({
        'fields': list([
          'Id',
          'Name',
          'Industry',
          'AnnualRevenue',
        ]),
        'id': 'src_salesforce_Account',
        'label': 'Salesforce - Account',
        'parentId': 'sys_aam_sources',
        'sourceKey': 'salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'fields': list([
          'Id',
          'Name',
          'Amount',
          'StageName',
          'AccountId',
        ]),
        'id': 'src_salesforce_Opportunity',
        'label': 'Salesforce - Opportunity',
        'parentId': 'sys_aam_sources',
        'sourceKey': 'salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'id': 'agent_revops_pilot',
        'label': 'RevOps Pilot',
        'type': 'agent',
      }),
      dict({
        'fields': list([
          'id',
          'name',
          'domain',
          'industry',
        ]),
        'id': 'src_hubspot_Company',
        'label': 'Hubspot - Company',
        'parentId': 'sys_aam_sources',
        'sourceKey': 'hubspot',
        'sourceSystem': 'Hubspot',
        'type': 'source',
      }),
      dict({
        'fields': list([
          'id',
          'dealname',
          'amount',
          'dealstage',
          'company_id',
        ]),
        'id': 'src_hubspot_Deal',
        'label': 'Hubspot - Deal',
        'parentId': 'sys_aam_sources',
        'sourceKey': 'hubspot',
        'sourceSystem': 'Hubspot',
        'type': 'source',
      }),
    ]),
    'rag': dict({
      'last_retrieval_count': 6,
      'mappings_retrieved': 6,
      'retrievals': list([
        dict({
          'ontology_entity': 'opportunity.stage',
          'similarity': 0.889,
          'source_field': 'deal_stage',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.industry',
          'similarity': 0.885,
          'source_field': 'industry',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.amount',
          'similarity': 0.88,
          'source_field': 'amount',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.account_id',
          'similarity': 0.864,
          'source_field': 'company_id',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.probability',
          'similarity': 0.864,
          'source_field': 'probability',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.opportunity_name',
          'similarity': 0.862,
          'source_field': 'deal_name',
          'source_system': 'hubspot',
        }),
      ]),
      'total_mappings': 14956,
    }),
    'selected_agents': list([
      'revops_pilot',
    ]),
    'source_mode': 'demo_files',
    'sources_added': list([
      'salesforce',
      'hubspot',
    ]),
    'timeline': list([
    ]),
  })
# ---
# name: TestDCLStateContract.test_graph_state_with_sources_structure
  dict({
    'agent_consumption': dict({
      'finops_pilot': list([
        'aws_resources',
        'cost_reports',
      ]),
      'revops_pilot': list([
        'account',
        'opportunity',
        'health',
        'usage',
      ]),
    }),
    'auth_enabled': True,
    'auto_ingest_unmapped': False,
    'confidence': 0.8171428571428571,
    'dev_mode': False,
    'edges': list([
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'revenue',
            'source': 'AnnualRevenue',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'Industry',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'created_date',
            'source': 'CreatedDate',
          }),
        ]),
        'label': 'salesforce_Account → account',
        'source': 'src_salesforce_Account',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'Name',
          }),
        ]),
        'label': 'salesforce_Opportunity → account',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'Amount',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'close_date',
            'source': 'CloseDate',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'StageName',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'account_id',
            'source': 'Id',
          }),
        ]),
        'label': 'salesforce_Opportunity → opportunity',
        'source': 'src_salesforce_Opportunity',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_aam_sources',
        'target': 'src_salesforce_Account',
        'value': 1,
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_aam_sources',
        'target': 'src_salesforce_Opportunity',
        'value': 1,
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'account_id',
          'account_name',
          'industry',
          'revenue',
          'employee_count',
          'created_date',
        ]),
        'entity_name': 'account',
        'label': '',
        'source': 'dcl_account',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'dataflow',
        'entity_fields': list([
          'opportunity_id',
          'opportunity_name',
          'account_id',
          'stage',
          'amount',
          'close_date',
          'probability',
        ]),
        'entity_name': 'opportunity',
        'label': '',
        'source': 'dcl_opportunity',
        'target': 'agent_revops_pilot',
        'type': 'consumption',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.85,
            'onto_field': 'account_name',
            'source': 'deal_name',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'industry',
            'source': 'industry',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'created_date',
            'source': 'created_date',
          }),
        ]),
        'label': 'hubspot_Deals → account',
        'source': 'src_hubspot_Deals',
        'target': 'dcl_account',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'dataflow',
        'field_mappings': list([
          dict({
            'confidence': 0.82,
            'onto_field': 'amount',
            'source': 'amount',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'close_date',
            'source': 'close_date',
          }),
          dict({
            'confidence': 0.85,
            'onto_field': 'stage',
            'source': 'deal_stage',
          }),
          dict({
            'confidence': 0.8,
            'onto_field': 'probability',
            'source': 'probability',
          }),
        ]),
        'label': 'hubspot_Deals → opportunity',
        'source': 'src_hubspot_Deals',
        'target': 'dcl_opportunity',
        'type': 'mapping',
      }),
      dict({
        'edgeType': 'hierarchy',
        'source': 'sys_aam_sources',
        'target': 'src_hubspot_Deals',
        'value': 1,
      }),
    ]),
    'entity_sources': dict({
    }),
    'events': list([
    ]),
    'llm': dict({
      'calls': 12,
      'calls_saved': 5,
      'tokens': 143940,
    }),
    'metadata': dict({
      'agent_consumption': dict({
        'finops_pilot': list([
          'aws_resources',
          'cost_reports',
        ]),
        'revops_pilot': list([
          'account',
          'opportunity',
          'health',
          'usage',
        ]),
      }),
      'auth_enabled': True,
      'auto_ingest_unmapped': False,
      'dev_mode': False,
      'events': list([
      ]),
      'llm': dict({
        'calls': 12,
        'calls_saved': 5,
        'tokens': 143940,
      }),
      'rag': dict({
        'last_retrieval_count': 13,
        'mappings_retrieved': 13,
        'retrievals': list([
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.897,
            'source_field': 'annual_contract_value',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.probability',
            'similarity': 0.893,
            'source_field': 'probability',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.close_date',
            'similarity': 0.891,
            'source_field': 'close_date',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.stage',
            'similarity': 0.89,
            'source_field': 'deal_stage',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.opportunity_id',
            'similarity': 0.888,
            'source_field': 'deal_id',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.created_date',
            'similarity': 0.887,
            'source_field': 'created_date',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.opportunity_name',
            'similarity': 0.886,
            'source_field': 'deal_name',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.amount',
            'similarity': 0.878,
            'source_field': 'amount',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'opportunity.account_id',
            'similarity': 0.877,
            'source_field': 'company_id',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.873,
            'source_field': 'mrr',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.industry',
            'similarity': 0.872,
            'source_field': 'industry',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.account_name',
            'similarity': 0.871,
            'source_field': 'company_name',
            'source_system': 'hubspot',
          }),
          dict({
            'ontology_entity': 'account.revenue',
            'similarity': 0.865,
            'source_field': 'arr',
            'source_system': 'hubspot',
          }),
        ]),
        'total_mappings': 14956,
      }),
      'source_mode': 'demo_files',
      'timeline': list([
      ]),
    }),
    'nodes': list([
      dict({
        'id': 'dcl_account',
        'label': 'Account (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'dcl_opportunity',
        'label': 'Opportunity (Unified)',
        'type': 'ontology',
      }),
      dict({
        'id': 'sys_aam_sources',
        'label': 'from AAM',
        'type': 'source_parent',
      }),
      dict({
        'fields': list([
          'Id',
          'Name',
          'Industry',
          'AnnualRevenue',
          'CreatedDate',
        ]),
        'id': 'src_salesforce_Account',
        'label': 'Salesforce - Account',
        'parentId': 'sys_aam_sources',
        'sourceKey': 'salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'fields': list([
          'Id',
          'AccountId',
          'Name',
          'Amount',
          'CloseDate',
          'StageName',
        ]),
        'id': 'src_salesforce_Opportunity',
        'label': 'Salesforce - Opportunity',
        'parentId': 'sys_aam_sources',
        'sourceKey': 'salesforce',
        'sourceSystem': 'Salesforce',
        'type': 'source',
      }),
      dict({
        'id': 'agent_revops_pilot',
        'label': 'RevOps Pilot',
        'type': 'agent',
      }),
      dict({
        'fields': list([
          'deal_id',
          'deal_name',
          'amount',
          'close_date',
          'expected_close_date',
          'deal_stage',
          'deal_type',
          'probability',
          'deal_owner',
          'deal_owner_email',
          'company_name',
          'company_id',
          'industry',
          'lead_source',
          'created_date',
          'last_modified_date',
          'annual_contract_value',
          'deal_currency',
          'forecast_category',
          'next_step',
          'competitors',
          'num_decision_makers',
          'deal_description',
          'contract_term_months',
          'renewal_date',
          'mrr',
          'arr',
        ]),
        'id': 'src_hubspot_Deals',
        'label': 'Hubspot - Deals',
        'parentId': 'sys_aam_sources',
        'sourceKey': 'hubspot',
        'sourceSystem': 'Hubspot',
        'type': 'source',
      }),
    ]),
    'rag': dict({
      'last_retrieval_count': 13,
      'mappings_retrieved': 13,
      'retrievals': list([
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.897,
          'source_field': 'annual_contract_value',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.probability',
          'similarity': 0.893,
          'source_field': 'probability',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.close_date',
          'similarity': 0.891,
          'source_field': 'close_date',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.stage',
          'similarity': 0.89,
          'source_field': 'deal_stage',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.opportunity_id',
          'similarity': 0.888,
          'source_field': 'deal_id',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.created_date',
          'similarity': 0.887,
          'source_field': 'created_date',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.opportunity_name',
          'similarity': 0.886,
          'source_field': 'deal_name',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.amount',
          'similarity': 0.878,
          'source_field': 'amount',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'opportunity.account_id',
          'similarity': 0.877,
          'source_field': 'company_id',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.873,
          'source_field': 'mrr',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.industry',
          'similarity': 0.872,
          'source_field': 'industry',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.account_name',
          'similarity': 0.871,
          'source_field': 'company_name',
          'source_system': 'hubspot',
        }),
        dict({
          'ontology_entity': 'account.revenue',
          'similarity': 0.865,
          'source_field': 'arr',
          'source_system': 'hubspot',
        }),
      ]),
      'total_mappings': 14956,
    }),
    'selected_agents': list([
      'revops_pilot',
    ]),
    'source_mode': 'demo_files',
    'sources_added': list([
      'salesforce',
      'hubspot',
    ]),
    'timeline': list([
    ]),
  })
# ---
